// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditAlertPreferncesSection handles next button click 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="card-main undefined"
      >
        <div>
          <h2
            class="title-2 pl-3"
          >
            Edit Alert Preferences
          </h2>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 12px; min-height: 12px;"
          />
          <p
            class="body-1 pl-3"
            style="display: block;"
          >
            Sign up for email and text alerts.
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 18px; min-height: 18px;"
          />
          <div
            class="card-main undefined"
          >
            <div
              class="flex flex-col"
            >
              <div
                aria-checked="false"
                aria-disabled="false"
                aria-invalid="false"
                aria-label="Receive Text Alerts"
                aria-required="false"
                class="flex flex-col   "
                role="checkbox"
              >
                <div
                  class="flex flex-row items-baseline"
                  tabindex="0"
                >
                  <input
                    aria-label="Receive Text Alerts"
                    class="checkbox    "
                    id="checkbox-receive-text-alerts"
                    type="checkbox"
                  />
                  <label
                    class="ml-2  cursor-pointer"
                    for="checkbox-receive-text-alerts"
                  >
                    <p
                      class="body-1 body-bold"
                      style="display: block;"
                    >
                      Receive Text Alerts
                    </p>
                     
                    <p
                      class="body-1 mt-2"
                      style="display: block;"
                    >
                      Get text alerts with plan updates and personalized health notifications.
                    </p>
                     
                    <span
                      class="sr-only"
                    >
                      Receive Text Alerts
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card-main undefined"
          >
            <div
              class="flex flex-col"
            >
              <div
                aria-checked="true"
                aria-disabled="false"
                aria-invalid="false"
                aria-label="Receive Email Alerts"
                aria-required="false"
                class="flex flex-col   "
                role="checkbox"
              >
                <div
                  class="flex flex-row items-baseline"
                  tabindex="0"
                >
                  <input
                    aria-label="Receive Email Alerts"
                    class="checkbox  checked checkbox--checked  "
                    id="checkbox-receive-email-alerts"
                    type="checkbox"
                  />
                  <label
                    class="ml-2  cursor-pointer"
                    for="checkbox-receive-email-alerts"
                  >
                    <p
                      class="body-1 body-bold"
                      style="display: block;"
                    >
                      Receive Email Alerts
                    </p>
                     
                    <p
                      class="body-1 mt-2"
                      style="display: block;"
                    >
                      Get important plan updates, claims information and/or health and wellness topics sent to your email.
                    </p>
                     
                    <span
                      class="sr-only"
                    >
                      Receive Email Alerts
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="flex flex-col emailAlertsSublevel"
              >
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 18px; min-height: 18px;"
                />
                <div
                  class=""
                  style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                />
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 18px; min-height: 18px;"
                />
                <p
                  class="body-1"
                  style="display: block;"
                >
                  Choose the emails you want to receive:
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-row pl-3 pr-3"
          >
            <button
              aria-label="Cancel"
              class="button-text secondary text-center flex flex-row justify-center items-center min-w-fit null undefined"
              type="button"
            >
              Cancel
            </button>
            <span
              style="display: block; width: 32px; min-width: 32px; height: 1px; min-height: 1px;"
            />
            <button
              aria-label="Next"
              class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null undefined"
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="card-main undefined"
    >
      <div>
        <h2
          class="title-2 pl-3"
        >
          Edit Alert Preferences
        </h2>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 12px; min-height: 12px;"
        />
        <p
          class="body-1 pl-3"
          style="display: block;"
        >
          Sign up for email and text alerts.
        </p>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 18px; min-height: 18px;"
        />
        <div
          class="card-main undefined"
        >
          <div
            class="flex flex-col"
          >
            <div
              aria-checked="false"
              aria-disabled="false"
              aria-invalid="false"
              aria-label="Receive Text Alerts"
              aria-required="false"
              class="flex flex-col   "
              role="checkbox"
            >
              <div
                class="flex flex-row items-baseline"
                tabindex="0"
              >
                <input
                  aria-label="Receive Text Alerts"
                  class="checkbox    "
                  id="checkbox-receive-text-alerts"
                  type="checkbox"
                />
                <label
                  class="ml-2  cursor-pointer"
                  for="checkbox-receive-text-alerts"
                >
                  <p
                    class="body-1 body-bold"
                    style="display: block;"
                  >
                    Receive Text Alerts
                  </p>
                   
                  <p
                    class="body-1 mt-2"
                    style="display: block;"
                  >
                    Get text alerts with plan updates and personalized health notifications.
                  </p>
                   
                  <span
                    class="sr-only"
                  >
                    Receive Text Alerts
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card-main undefined"
        >
          <div
            class="flex flex-col"
          >
            <div
              aria-checked="true"
              aria-disabled="false"
              aria-invalid="false"
              aria-label="Receive Email Alerts"
              aria-required="false"
              class="flex flex-col   "
              role="checkbox"
            >
              <div
                class="flex flex-row items-baseline"
                tabindex="0"
              >
                <input
                  aria-label="Receive Email Alerts"
                  class="checkbox  checked checkbox--checked  "
                  id="checkbox-receive-email-alerts"
                  type="checkbox"
                />
                <label
                  class="ml-2  cursor-pointer"
                  for="checkbox-receive-email-alerts"
                >
                  <p
                    class="body-1 body-bold"
                    style="display: block;"
                  >
                    Receive Email Alerts
                  </p>
                   
                  <p
                    class="body-1 mt-2"
                    style="display: block;"
                  >
                    Get important plan updates, claims information and/or health and wellness topics sent to your email.
                  </p>
                   
                  <span
                    class="sr-only"
                  >
                    Receive Email Alerts
                  </span>
                </label>
              </div>
            </div>
            <div
              class="flex flex-col emailAlertsSublevel"
            >
              <span
                style="display: block; width: 1px; min-width: 1px; height: 18px; min-height: 18px;"
              />
              <div
                class=""
                style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
              />
              <span
                style="display: block; width: 1px; min-width: 1px; height: 18px; min-height: 18px;"
              />
              <p
                class="body-1"
                style="display: block;"
              >
                Choose the emails you want to receive:
              </p>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-row pl-3 pr-3"
        >
          <button
            aria-label="Cancel"
            class="button-text secondary text-center flex flex-row justify-center items-center min-w-fit null undefined"
            type="button"
          >
            Cancel
          </button>
          <span
            style="display: block; width: 32px; min-width: 32px; height: 1px; min-height: 1px;"
          />
          <button
            aria-label="Next"
            class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null undefined"
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EditAlertPreferncesSection renders component and toggles checkboxes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="card-main undefined"
      >
        <div>
          <h2
            class="title-2 pl-3"
          >
            Edit Alert Preferences
          </h2>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 12px; min-height: 12px;"
          />
          <p
            class="body-1 pl-3"
            style="display: block;"
          >
            Sign up for email and text alerts.
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 18px; min-height: 18px;"
          />
          <div
            class="card-main undefined"
          >
            <div
              class="flex flex-col"
            >
              <div
                aria-checked="false"
                aria-disabled="false"
                aria-invalid="false"
                aria-label="Receive Text Alerts"
                aria-required="false"
                class="flex flex-col   "
                role="checkbox"
              >
                <div
                  class="flex flex-row items-baseline"
                  tabindex="0"
                >
                  <input
                    aria-label="Receive Text Alerts"
                    class="checkbox    "
                    id="checkbox-receive-text-alerts"
                    type="checkbox"
                  />
                  <label
                    class="ml-2  cursor-pointer"
                    for="checkbox-receive-text-alerts"
                  >
                    <p
                      class="body-1 body-bold"
                      style="display: block;"
                    >
                      Receive Text Alerts
                    </p>
                     
                    <p
                      class="body-1 mt-2"
                      style="display: block;"
                    >
                      Get text alerts with plan updates and personalized health notifications.
                    </p>
                     
                    <span
                      class="sr-only"
                    >
                      Receive Text Alerts
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card-main undefined"
          >
            <div
              class="flex flex-col"
            >
              <div
                aria-checked="false"
                aria-disabled="false"
                aria-invalid="false"
                aria-label="Receive Email Alerts"
                aria-required="false"
                class="flex flex-col   "
                role="checkbox"
              >
                <div
                  class="flex flex-row items-baseline"
                  tabindex="0"
                >
                  <input
                    aria-label="Receive Email Alerts"
                    class="checkbox    "
                    id="checkbox-receive-email-alerts"
                    type="checkbox"
                  />
                  <label
                    class="ml-2  cursor-pointer"
                    for="checkbox-receive-email-alerts"
                  >
                    <p
                      class="body-1 body-bold"
                      style="display: block;"
                    >
                      Receive Email Alerts
                    </p>
                     
                    <p
                      class="body-1 mt-2"
                      style="display: block;"
                    >
                      Get important plan updates, claims information and/or health and wellness topics sent to your email.
                    </p>
                     
                    <span
                      class="sr-only"
                    >
                      Receive Email Alerts
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="card-main undefined"
    >
      <div>
        <h2
          class="title-2 pl-3"
        >
          Edit Alert Preferences
        </h2>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 12px; min-height: 12px;"
        />
        <p
          class="body-1 pl-3"
          style="display: block;"
        >
          Sign up for email and text alerts.
        </p>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 18px; min-height: 18px;"
        />
        <div
          class="card-main undefined"
        >
          <div
            class="flex flex-col"
          >
            <div
              aria-checked="false"
              aria-disabled="false"
              aria-invalid="false"
              aria-label="Receive Text Alerts"
              aria-required="false"
              class="flex flex-col   "
              role="checkbox"
            >
              <div
                class="flex flex-row items-baseline"
                tabindex="0"
              >
                <input
                  aria-label="Receive Text Alerts"
                  class="checkbox    "
                  id="checkbox-receive-text-alerts"
                  type="checkbox"
                />
                <label
                  class="ml-2  cursor-pointer"
                  for="checkbox-receive-text-alerts"
                >
                  <p
                    class="body-1 body-bold"
                    style="display: block;"
                  >
                    Receive Text Alerts
                  </p>
                   
                  <p
                    class="body-1 mt-2"
                    style="display: block;"
                  >
                    Get text alerts with plan updates and personalized health notifications.
                  </p>
                   
                  <span
                    class="sr-only"
                  >
                    Receive Text Alerts
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card-main undefined"
        >
          <div
            class="flex flex-col"
          >
            <div
              aria-checked="false"
              aria-disabled="false"
              aria-invalid="false"
              aria-label="Receive Email Alerts"
              aria-required="false"
              class="flex flex-col   "
              role="checkbox"
            >
              <div
                class="flex flex-row items-baseline"
                tabindex="0"
              >
                <input
                  aria-label="Receive Email Alerts"
                  class="checkbox    "
                  id="checkbox-receive-email-alerts"
                  type="checkbox"
                />
                <label
                  class="ml-2  cursor-pointer"
                  for="checkbox-receive-email-alerts"
                >
                  <p
                    class="body-1 body-bold"
                    style="display: block;"
                  >
                    Receive Email Alerts
                  </p>
                   
                  <p
                    class="body-1 mt-2"
                    style="display: block;"
                  >
                    Get important plan updates, claims information and/or health and wellness topics sent to your email.
                  </p>
                   
                  <span
                    class="sr-only"
                  >
                    Receive Email Alerts
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
